Added show notes

--- a/content/2023-05-05-episode-001.md
+++ b/content/2023-05-05-episode-001.md
@@ -1,8 +1,8 @@
 +++
 title = "Episode 1: Hello, World!"
-description = "This is the episode summary."
+description = "Ecton and ToggleBit meet for an introductory episode of The Way of the Crab. The primary topics are: Who are we? What are we trying to build? What is our \"must-use\" crate? We also talk about our user interface projects."
 [extra]
-episode_type = "trailer"
+episode_type = "full"
 guid = "wotc001"
 duration = 1079
 explicit = "false"
@@ -10,4 +10,38 @@ aac_url = "http://127.0.0.1/"
 aac_length = 12345678
 +++
 
-This is where the episode's show notes go.
+Ecton and ToggleBit meet for an introductory episode of The Way of the Crab.
+
+The main topics are:
+
+- Who are we?
+- How did we start programming?
+- When did we start using Rust?
+- What are we trying to build?
+- What does each of us think our favorite/most-often-used crate is?
+
+We also talk about our user interface projects that we've been working on
+recently.
+
+Here are links to various topics mentioned throughout the episode. The list is
+organized by when it is first mentioned.
+
+- [Ecton (GitHub)](https://github.com/ecton)
+- [BonsaiDb](https://bonsaidb.io)
+- [HyperCard](https://en.wikipedia.org/wiki/HyperCard)
+- [ToggleBit (GitHub)](https://github.com/togglebyte) / [ToggleBit (Twitch)](https://twitch.tv/togglebit)
+- [Dining Philosophers problem](https://en.wikipedia.org/wiki/Dining_philosophers_problem)
+- [Rocket](https://rocket.rs/)
+- [Coffee with Butterscotch](https://www.bscotch.net/podcast)
+- [i3 Window Manager](https://i3wm.org/)
+- [tui-rs](https://crates.io/crates/tui)
+- [crossterm](https://crates.io/crates/crossterm)
+- [ncurses](https://en.wikipedia.org/wiki/Ncurses)
+- ToggleBit's TUI library, whose name wasn't mentioned in the episode: [Anathema](https://github.com/togglebyte/anathema)
+- [Gooey](https://github.com/khonsulabs/gooey)
+- [leptos](https://crates.io/crates/leptos)
+- [flume](https://crates.io/crates/flume)
+- [slotmap](https://crates.io/crates/slotmap)
+- [slab](https://crates.io/crates/slab)
+
+TODO: Where do we want the community to gather? New discord server?
