Updating episode metadata

--- a/content/2023-05-05-episode-001.md
+++ b/content/2023-05-05-episode-001.md
@@ -4,10 +4,10 @@ description = "Ecton and ToggleBit meet for an introductory episode of The Way o
 [extra]
 episode_type = "full"
 guid = "wotc001"
-duration = 1079
+duration = 4161
 explicit = "false"
-aac_url = "http://127.0.0.1/"
-aac_length = 12345678
+aac_url = "https://files.wayofthecrab.com/episode-001.m4a"
+aac_length = 67502383
 +++
 
 Ecton and ToggleBit meet for an introductory episode of The Way of the Crab.
