Linking to the active fork of tui-rs

--- a/content/episodes/001.md
+++ b/content/episodes/001.md
@@ -37,7 +37,7 @@ organized by when it is first mentioned.
 - [Rocket](https://rocket.rs/)
 - [Coffee with Butterscotch](https://www.bscotch.net/podcast)
 - [i3 Window Manager](https://i3wm.org/)
-- [tui-rs](https://crates.io/crates/tui)
+- [tui-rs](https://crates.io/crates/tui), now maintained as [ratatui](https://github.com/tui-rs-revival/ratatui)
 - [crossterm](https://crates.io/crates/crossterm)
 - [ncurses](https://en.wikipedia.org/wiki/Ncurses)
 - ToggleBit's TUI library, whose name wasn't mentioned in the episode: [Anathema](https://github.com/togglebyte/anathema)
