Fixing incorrect link

--- a/content/episodes/002.md
+++ b/content/episodes/002.md
@@ -33,7 +33,7 @@ organized by when it is first mentioned.
 - [Factory Pattern](https://en.wikipedia.org/wiki/Factory_method_pattern)
 - [Leptos](https://github.com/leptos-rs/leptos)
 - [ModProg](https://github.com/modprog)
-- [REALbasic/Xojo](https://github.com/leptos-rs/leptos)
+- [REALbasic/Xojo](https://xojo.com/)
 - [Electron](https://www.electronjs.org/)
 - [Tauri](https://tauri.app/)
 - [Dioxus](https://github.com/DioxusLabs/dioxus/)
