Fixing typo in link

--- a/content/episodes/009.md
+++ b/content/episodes/009.md
@@ -21,7 +21,7 @@ aac_length = 28225460
   - [wgpu](https://github.com/gfx-rs/wgpu)
   - [cosmic-text](https://github.com/pop-os/cosmic-text)
   - [glyphon](https://github.com/grovesNL/glyphon)
-  - [wgpu: Encapsulating Graphics Works](https://github.com/gfx-rs/wgpu/wiki/Encapsulating-Graphics-Work)
+  - [wgpu: Encapsulating Graphics Work](https://github.com/gfx-rs/wgpu/wiki/Encapsulating-Graphics-Work)
 - 05:40 What has Togglebit been up to?
   - [Play position PR](https://github.com/WayOfTheCrab/podcast/pull/9)
   - [Anathema](https://github.com/togglebyte/anathema)
