Fixing broken link
Bad Jon for deleting a branch.

--- a/content/episodes/003.md
+++ b/content/episodes/003.md
@@ -37,7 +37,7 @@ organized by when it is first mentioned.
 - [Anathema](https://github.com/togglebyte/anathema) (ToggleBit's text-user
   interface project)
 - [Domain Specific Language (DSL)](https://en.wikipedia.org/wiki/Domain-specific_language)
-- [Gooey proof-of-concept](https://github.com/khonsulabs/gooey/tree/reactive)
+- [Gooey proof-of-concept](https://github.com/khonsulabs/gooey)
 - [quote](https://github.com/dtolnay/quote)
 - [Rust Analyzer Blog: IDEs and Macros](https://rust-analyzer.github.io/blog/2021/11/21/ides-and-macros.html)
 
