--- a/content/episodes/004.md
+++ b/content/episodes/004.md
@@ -29,7 +29,7 @@ organized by when it is first mentioned.
 
 - [BonsaiDb](https://bonsaidb.io/)
 - [Memento](https://en.wikipedia.org/wiki/Memento_(film))
-- [Gooey](https://github.com/khonsulabs/gooey/tree/reactive)
+- [Gooey](https://github.com/khonsulabs/gooey)
 - [Binary Search](https://en.wikipedia.org/wiki/Binary_search_algorithm)
 - [PyO3](https://github.com/PyO3/pyo3)
 - [Keep a Changelog](https://keepachangelog.com/)
