--- a/content/episodes/005.md
+++ b/content/episodes/005.md
@@ -17,7 +17,7 @@ discuss everything except their game project.
 
 - 00:25: What has Ecton been working on?
   - `OnceLock`/`OnceCell` [stabilized in Rust 1.70](https://github.com/rust-lang/rust/pull/105587/)
-  - [Gooey](https://github.com/khonsulabs/gooey/tree/reactive)
+  - [Gooey](https://github.com/khonsulabs/gooey)
   - [`kempt`](https://github.com/khonsulabs/kempt) (Ecton's library he released,
     but failed to name on the podcast)
   - [`PartialOrd<str>` missing for `String`](https://github.com/rust-lang/libs-team/issues/232)
