--- a/content/episodes/006.md
+++ b/content/episodes/006.md
@@ -23,7 +23,7 @@ discussing their game project for another episode!
   - [futures::select!()](https://docs.rs/futures/latest/futures/macro.select.html)/[futures::select_biased!()](https://docs.rs/futures/latest/futures/macro.select_biased.html)
   - [tokio::time::timeout()](https://docs.rs/tokio/latest/tokio/time/fn.timeout.html)
   - [pin_project](https://github.com/taiki-e/pin-project)
-- 08:56: Working on styling [Gooey](https://github.com/khonsulabs/gooey/tree/reactive) apps
+- 08:56: Working on styling [Gooey](https://github.com/khonsulabs/gooey) apps
 - 11:56: Working on [Anathema](https://github.com/togglebyte/anathema)'s viewport
 - 17:56: Our philosophies on writing tests
   - [kempt](https://github.com/togglebyte/anathema)
