--- a/content/episodes/007.md
+++ b/content/episodes/007.md
@@ -15,7 +15,7 @@ aac_length = 27406788
 ## Notes
 
 - 00:19: What has Ecton been working on?
-  - [Gooey](https://github.com/khonsulabs/gooey/tree/reactive)
+  - [Gooey](https://github.com/khonsulabs/gooey)
   - [The Reddit blackout explained](https://www.npr.org/2023/06/13/1182001429/the-reddit-blackout-explained)
   - [Lemmy](https://github.com/LemmyNet/lemmy)
   - [Usenet](https://en.wikipedia.org/wiki/Usenet)
