--- a/content/episodes/008.md
+++ b/content/episodes/008.md
@@ -17,7 +17,7 @@ aac_length = 28488400
 - 00:55 What has Ecton been up to?
   - [CityHasher](https://github.com/khonsulabs/cityhasher)
   - [CRC](https://en.wikipedia.org/wiki/Cyclic_redundancy_check)
-  - [Gooey](https://github.com/khonsulabs/gooey/tree/reactive)
+  - [Gooey](https://github.com/khonsulabs/gooey)
   - [wgpu](https://github.com/gfx-rs/wgpu)
   - [winit](https://github.com/rust-windowing/winit)
   - [Kludgine](https://github.com/khonsulabs/kludgine)
