--- a/content/episodes/009.md
+++ b/content/episodes/009.md
@@ -32,7 +32,7 @@ aac_length = 28225460
 - 21:55 What are we going to start working on first?
   - [Multi-user Dungeon](https://en.wikipedia.org/wiki/Multi-user_dungeon)
   - [rayon](https://github.com/rayon-rs/rayon)
-  - [Gooey](https://github.com/khonsulabs/gooey/tree/reactive)
+  - [Gooey](https://github.com/khonsulabs/gooey)
 - 30:53 Game monetization
   - [1,000 True Fans](https://kk.org/thetechnium/1000-true-fans/)
 - 37:33 Optimizing time-to-play
