--- a/content/episodes/011.md
+++ b/content/episodes/011.md
@@ -33,3 +33,9 @@ aac_length = 26997905
   - [Previewing Bud(Lang)](https://ecton.dev/previewing-budlang/)
 - 39:45 What is our current vision of the game user interface?
   - [Mordor: The Depths of Dejenol](https://www.abandonwaredos.com/abandonware-game.php?gid=2243)
+
+We welcome your feedback and questions and have set up these ways of reaching us:
+
+- Email us at [podcast@wayofthecrab.com](mailto:podcast@wayofthecrab.com)
+- Join our [Discord community](https://discord.gg/gREMsW2uAd).
+- Post on our [GitHub Discussions](https://github.com/WayOfTheCrab/podcast/discussions)
